--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -3,33 +3,31 @@
 name: Build and Push Docker Image to AWS ECR
 
 on:
-	push:
-		branches:
-			- main
+    push:
+        branches:
+            - main
 
 jobs:
-	build-and-push:
-		runs-on: ubuntu-latest
-		steps:
-			- name: Checkout code
-				uses: actions/checkout@v4
+    build-and-push:
+        runs-on: ubuntu-latest
+        steps:
+        - name: Checkout code
+          uses: actions/checkout@v4
 
-			- name: Set up Docker Buildx
-				uses: docker/setup-buildx-action@v3
+        - name: Set up Docker Buildx
+          uses: docker/setup-buildx-action@v3
 
-			- name: Log in to Amazon ECR
-				uses: aws-actions/amazon-ecr-login@v4
-				with:
-					registry-type: public
-				env:
-					AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-					AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-					AWS_REGION: ${{ secrets.AWS_REGION }}
+        - name: Log in to Amazon ECR
+          uses: aws-actions/amazon-ecr-login@v4
+          with:
+            registry-type: public
+          env:
+                    AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+                    AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+                    AWS_REGION: ${{ secrets.AWS_REGION }}
+        - name: Build Docker image
+          run: |
+            docker build -t ${{ secrets.ECR_REPOSITORY }}:latest .
 
-			- name: Build Docker image
-				run: |
-					docker build -t ${{ secrets.ECR_REPOSITORY }}:latest .
-
-			- name: Push Docker image to ECR
-				run: |
-					docker push ${{ secrets.ECR_REPOSITORY }}:latest
+        - name: Push Docker image to ECR
+          run: docker push ${{ secrets.ECR_REPOSITORY }}:latest
