--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -17,14 +17,18 @@ jobs:
         - name: Set up Docker Buildx
           uses: docker/setup-buildx-action@v3
 
-        - name: Log in to Amazon ECR
-          uses: aws-actions/amazon-ecr-login@v4
+        - name: Configure AWS credentials
+          uses: aws-actions/configure-aws-credentials@v4
           with:
-            registry-type: public
-          env:
-                    AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-                    AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-                    AWS_REGION: ${{ secrets.AWS_REGION }}
+            aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+            aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+            aws-region: ${{ secrets.AWS_REGION }}
+
+        - name: Login to Amazon ECR Public
+          run: |
+            aws ecr-public get-login-password --region us-east-1 \
+              | docker login --username AWS --password-stdin public.ecr.aws
+        
         - name: Build Docker image
           run: |
             docker build -t ${{ secrets.ECR_REPOSITORY }}:latest .
