--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -14,8 +14,7 @@ jobs:
         - name: Checkout code
           uses: actions/checkout@v4
 
-        - name: Set up Docker Buildx
-          uses: docker/setup-buildx-action@v3
+        - run: npm ci && npm run build
 
         - name: Configure AWS credentials
           uses: aws-actions/configure-aws-credentials@v4
@@ -29,9 +28,8 @@ jobs:
             aws ecr-public get-login-password --region us-east-1 \
               | docker login --username AWS --password-stdin public.ecr.aws
         
-        - name: Build Docker image
-          run: |
-            docker build -t ${{ secrets.ECR_REPOSITORY }}:latest .
+        - run: aws s3 sync dist/ s3://${{ vars.S3_BUCKET }}/ --delete
 
-        - name: Push Docker image to ECR
-          run: docker push ${{ secrets.ECR_REPOSITORY }}:latest
+        - run: aws cloudfront create-invalidation \
+            --distribution-id ${{ vars.CF_DIST_ID }} \
+            --paths "/*"
