--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -30,6 +30,4 @@ jobs:
         
         - run: aws s3 sync dist/ s3://${{ vars.S3_BUCKET }}/ --delete
 
-        - run: aws cloudfront create-invalidation \
-            --distribution-id ${{ vars.CF_DIST_ID }} \
-            --paths "/*"
+        - run: aws cloudfront create-invalidation --distribution-id ${{ vars.CF_DIST_ID }} --paths "/*"
